# GRACE-Web-Tool

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json
.github/workflows/: deploy-api-v2.yml  deploy-api.yml
Grace-API/: app.py  predict.py  requirements.txt
api/: .env.example  Dockerfile  app.py  config.py  domino.py  dominoplusplus.py  dominopp.py  grace.py  main.py  predict.py  redeploy.sh  requirements.txt  watchlogs.sh
api/runtime/: preprocess.py  roast_runner.py  roast_scheduler.py  run_fem.py  runner.py  scheduler.py  session.py  simnibs_runner.py  simnibs_scheduler.py
api/services/: auth.py  email.py  notify.py  redis_client.py  volume_stats.py  workspace_db.py
api_v2/: .dockerignore  .env.example  Dockerfile  app.py  config.py  docker-compose.yml  docker-entrypoint.sh  requirements.txt
api_v2/runtime/: create_mni_warp.py  freesurfer.py  inference.py  preprocess.py  registry.py  roast_config.py  roast_runner.py  roast_scheduler.py  run_fem.py  runner.py  scheduler.py  session.py  simnibs_runner.py  simnibs_scheduler.py  sse.py
app/: globals.css  layout.tsx  page.tsx
crown-cli/: README.md  pyproject.toml
crown-cli/src/crown_cli/: cli.py
crown-cli/src/crown_cli/commands/: cancel.py  models.py  roast.py  run.py  segment.py  simulate.py  status.py
crown-cli/src/crown_cli/core/: batch.py  config.py  hub.py  progress.py  roast_runner.py  runner.py  worker.py
crown-cli/src/crown_cli/inference/: freesurfer.py  preprocess.py
crown-cli/tests/: test_batch.py  test_config.py  test_deps.py  test_hub.py  test_jobs.py  test_progress.py  test_roast_runner.py  test_worker.py
crown_cli/: README.md  cli.py  pyproject.toml
crown_cli/commands/: cancel.py  models.py  run.py  segment.py  simulate.py  status.py
crown_cli/core/: batch.py  config.py  deps.py  hub.py  jobs.py  progress.py  roast_runner.py  runner.py  worker.py
crown_cli/inference/: preprocess.py  registry.py
crown_cli/src/crown_cli/commands/: roast.py  run.py  simulate.py
crown_cli/src/crown_cli/core/: config.py  deps.py  hub.py  roast_config.py
crown_cli/src/crown_cli/inference/: registry.py
crown_cli/tests/: test_batch.py  test_config.py  test_deps.py  test_hub.py  test_runner.py
frontend/: package-lock.json  package.json
public/: resize_nifti.wasm
python/: convertPthToOnnx.py  requirements.txt  resize.py
ui/: Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
ui_v2/:    package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
webassembly/: resize_nifti.cpp
(+88 files in other folders)
