[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crown-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "duckdb>=0.10",
    "huggingface_hub>=0.22",
    "monai>=1.3",
    "nibabel>=5.2",
    "numpy>=1.26",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "einops",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
crown = "crown_cli.cli:main"

[tool.setuptools.packages]
find = {where = [".."], include = ["crown_cli*"]}
